--- a/app/views/contact_requests/thanks.html.erb
+++ b/app/views/contact_requests/thanks.html.erb
@@ -1,6 +1,6 @@
 <div class='thanks'>
   <h2>Thank you for reaching out</h2>
-  <p>We really appreciate your comments and questions, and they help us as we work to grow and strengthen the Doodles Academy platform and community. We'll be in touch!</p>
-  <p>Have an art-filled day.</p>
+  <p>We really appreciate your comments and questions; they help us immensely as we work to grow and strengthen the Doodles Academy platform and community. We'll be in touch!</p>
+  <p>Wishing you an art-filled day.</p>
   <p class="low-set"><%= link_to "Back to the front page", root_path %></p>
 </div>
