--- a/app/views/subscriptions/thanks.html.erb
+++ b/app/views/subscriptions/thanks.html.erb
@@ -1,6 +1,6 @@
 <div class='thanks'>
   <h2>Thank you for subscribing to our mailing list</h2>
-  <p>You'll receive periodic updates about the Doodles community and notifications of new lessons and projects as they're added. We'd love to hear your feedback and thoughts at <a href="mailto:feedback@doodles-academy.org">feedback@doodles-academy.org</a>.</p>
+  <p>You'll receive periodic updates about the Doodles community and notifications of new lessons and projects as they're added. We'd love to hear your feedback and thoughts on our <%= link_to 'contact page', contact_path %>, or feel free to email us at <a href="mailto:feedback@doodles-academy.org">feedback@doodles-academy.org</a>.</p>
   <p>Have a creative day!</p>
   <p class="low-set"><%= link_to "Back to the front page", root_path %></p>
 </div>
