styled quilt img on main page so that it fits hero window

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
   </section>
 
   <section class="homepage-section hero">
-    <%= image_tag 'quotes/imagequilt.jpg', class:"hero-img" %>
+    <%= image_tag 'quotes/imagequilt.jpg', class:"hero-img", style:"height:100%;" %>
     <div class="homepage-content hero-content">
       <h2 class='jumbo'>
         Art lessons that inspire real creativity.
