--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -13,4 +13,49 @@
 
 <h2>The Impact of Art</h2>
 <p>As funding continues to fall, the recognition of how vital arts education is continues to grow. Students who are given a high-quality arts education perform better on standardized tests. They develop creative problem solving, independent thinking, and growth mindset. Let Doodles Academy help you offer the best to your students.</p>
+
+<section class="homepage-section">
+  <div class="homepage-content">
+    <h2 class='jumbo'>
+      We make high-quality art education easy.
+    </h2>
+    <div>
+      <p class='lead'>
+        Doodles Academy brings art education to more students. We provide a free online curriculum and partner with schools in order to bring art classes where there would otherwise be none.
+      </p>
+    </div>
+    <div style='text-align: right;'>
+      <a class="btn btn-xl btn-blue" href='/projects'>
+        Go to Lesson Plans
+      </a>
+    </div>
+</section>
+<section class="hero quote">
+  <%= image_tag 'quotes/quote_image.jpg', class:"hero-img" %>
+  <div class="hero-content">
+    <div class="quote-contents"></div>
+  </div>
+  <div class="quote-selector"></div>
+</section>
+<section class="homepage-section bg-accent-green">
+  <div class="homepage-content">
+    <!-- <h2 style="font-size: 26px; font-weight: 500;"> -->
+    <h2 class='jumbo'>
+      Every student deserves art.
+    </h2>
+    <div>
+      <p class='lead'>
+       Our vision is that every child receives an arts education that inspires and rewards student creativity, growth and problem solving, irrespective of school budget, zip code, or student demographics.
+      </p>
+      <p class='lead'>
+       Donations help us develop and offer our free classes and free online curriculum, bringing quality art education to students everywhere.
+      </p>
+    </div>
+    <div style='text-align: right;'>
+      <a class="btn btn-xl btn-white" href="/donate">
+        Donate Now
+      </a>
+    </div>
+  </div>
+</section>
 </div>
