changes to about page styling

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -14,16 +14,11 @@
 <h2>The Impact of Art</h2>
 <p>As funding continues to fall, the recognition of how vital arts education is continues to grow. Students who are given a high-quality arts education perform better on standardized tests. They develop creative problem solving, independent thinking, and growth mindset. Let Doodles Academy help you offer the best to your students.</p>
 
-<section class="homepage-section">
+<section class="homepage-section" style="background-color: gray; margin: 60px 0 20px 0;">
   <div class="homepage-content">
-    <h2 class='jumbo'>
+    <p class='lead' style="color:white;">
       We make high-quality art education easy.
-    </h2>
-    <div>
-      <p class='lead'>
-        Doodles Academy brings art education to more students. We provide a free online curriculum and partner with schools in order to bring art classes where there would otherwise be none.
-      </p>
-    </div>
+    </p>
     <div style='text-align: right;'>
       <a class="btn btn-xl btn-blue" href='/projects'>
         Go to Lesson Plans
@@ -33,13 +28,7 @@
 <section class="homepage-section bg-accent-green">
   <div class="homepage-content">
     <!-- <h2 style="font-size: 26px; font-weight: 500;"> -->
-    <h2 class='jumbo'>
-      Every student deserves art.
-    </h2>
     <div>
-      <p class='lead'>
-       Our vision is that every child receives an arts education that inspires and rewards student creativity, growth and problem solving, irrespective of school budget, zip code, or student demographics.
-      </p>
       <p class='lead'>
        Donations help us develop and offer our free classes and free online curriculum, bringing quality art education to students everywhere.
       </p>
