more changes to about page styling

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -16,16 +16,16 @@
 
 <section class="homepage-section" style="background-color: gray; margin: 60px 0 20px 0;">
   <div class="homepage-content">
-    <p class='lead' style="color:white;">
+    <h2 class='jumbo' style="color:white;">
       We make high-quality art education easy.
-    </p>
+    </h2>
     <div style='text-align: right;'>
-      <a class="btn btn-xl btn-blue" href='/projects'>
+      <a class="btn btn-xl btn-gray" style="color:gray;" href='/projects'>
         Go to Lesson Plans
       </a>
     </div>
 </section>
-<section class="homepage-section bg-accent-green">
+<section class="homepage-section">
   <div class="homepage-content">
     <!-- <h2 style="font-size: 26px; font-weight: 500;"> -->
     <div>
@@ -34,7 +34,7 @@
       </p>
     </div>
     <div style='text-align: right;'>
-      <a class="btn btn-xl btn-white" href="/donate">
+      <a class="btn btn-xl btn-blue" href="/donate">
         Donate Now
       </a>
     </div>
