buttons on about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -14,30 +14,19 @@
 <h2>The Impact of Art</h2>
 <p>As funding continues to fall, the recognition of how vital arts education is continues to grow. Students who are given a high-quality arts education perform better on standardized tests. They develop creative problem solving, independent thinking, and growth mindset. Let Doodles Academy help you offer the best to your students.</p>
 
-<section class="homepage-section" style="background-color: gray; margin: 60px 0 20px 0;">
-  <div class="homepage-content">
-    <h2 class='jumbo' style="color:white;">
-      We make high-quality art education easy.
-    </h2>
-    <div style='text-align: right;'>
+<section class="homepage-section">
+  <div class="homepage-content" style="text-align: center;">
+    <div style="display: inline">
       <a class="btn btn-xl btn-gray" style="color:gray;" href='/projects'>
         Go to Lesson Plans
       </a>
     </div>
-</section>
-<section class="homepage-section">
-  <div class="homepage-content">
-    <!-- <h2 style="font-size: 26px; font-weight: 500;"> -->
-    <div>
-      <p class='lead'>
-       Donations help us develop and offer our free classes and free online curriculum, bringing quality art education to students everywhere.
-      </p>
-    </div>
-    <div style='text-align: right;'>
-      <a class="btn btn-xl btn-blue" href="/donate">
+    <div style="display: inline">
+      <a class="btn btn-xl btn-blue" style="margin-left: 60px;" href="/donate">
         Donate Now
       </a>
     </div>
   </div>
 </section>
+
 </div>
