--- a/app/assets/stylesheets/markdown.scss
+++ b/app/assets/stylesheets/markdown.scss
@@ -56,3 +56,11 @@
     padding: 20px;
   }
 }
+
+// #standards, #standards ~ p, #standards ~ h2 {
+//   background-color: lightgray;
+// }
+
+.lesson-section {
+    background-color: lightgray;
+}
