--- a/app/assets/stylesheets/partners.scss
+++ b/app/assets/stylesheets/partners.scss
@@ -1,3 +1,9 @@
+.donors, .community-partners {
+  text-align: center;
+  text-transform: none;
+  font-weight: 300;
+}
+
 .partners-image {
   width: 35%;
   float: right;
