--- a/app/views/contact_requests/new.html.erb
+++ b/app/views/contact_requests/new.html.erb
@@ -61,7 +61,7 @@
       <option>I'm part of the PTA</option>
       <option>I'm a parent who is home-schooling</option>
       <option>I'm a parent</option>
-      <option>I'm an arts-education activitist/part of a non-profit/volunteer</option>
+      <option>I'm an arts-education activitist/part of a nonprofit/volunteer</option>
     </select>
   </div>
 
