--- a/app/views/home/board.html.erb
+++ b/app/views/home/board.html.erb
@@ -7,7 +7,7 @@
     <%= image_tag 'portraits/tempest' %>
   </div>
   <div class="biography">
-    <p>Tempest NeuCollins is originally from Solon, Iowa. She moved to Portland, Oregon to study at Pacific Northwest College of Art for her BFA, then went on to New York City to receive an MFA from the School of Visual Arts in Studio Art. After graduating she worked for many non-profit organizations around New York City that provide an arts education to students in underserved communities, including TimeIn! and Free Arts NYC . Eventually she was asked to found and run an arts program at a Brooklyn based charter school, which she did for two years before founding Doodles Academy.  Tempest continues to make her own artwork, design lessons for Doodles Academy as well as act as Executive Director. Her lesson plans have been recognized and published in SchoolArts Magazine.</p>
+    <p>Tempest NeuCollins is originally from Solon, Iowa. She moved to Portland, Oregon to study at Pacific Northwest College of Art for her BFA, then went on to New York City to receive an MFA from the School of Visual Arts in Studio Art. After graduating she worked for many nonprofit organizations around New York City that provide an arts education to students in underserved communities, including TimeIn! and Free Arts NYC . Eventually she was asked to found and run an arts program at a Brooklyn based charter school, which she did for two years before founding Doodles Academy.  Tempest continues to make her own artwork, design lessons for Doodles Academy as well as act as Executive Director. Her lesson plans have been recognized and published in SchoolArts Magazine.</p>
   </div>
 </section>
 
