--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:page_title) { 'Community Supporters' } %>
 <% content_for(:hero_image) { image_tag 'heros/partners.jpg' } %>
 
-<h1 class="title">Donors</h1>
+<h1 class="donors">Donors</h1>
   <% if @donor_headline.present? %>
   <p class="lead centered"><%= @donor_headline %></p>
   <% end %>
@@ -17,14 +17,14 @@
   </ul>
 <% end %>
 
-<h1 class="title">Community Partners</h1>
+<h1 class="community-partners">Community Partners</h1>
 <a href="http://portlandchildart.org/"><%= image_tag 'partners/pdx-child-art-studio.jpg', class:'partners-image' %></a>
 <h2>Portland Child Art Studio</h2>
-<p>The <a href="http://portlandchildart.org/">Portland Child Art Studio</a> is dedicated to supporting the perceptual development of children through artistic learning.<p>
+<p><a href="http://portlandchildart.org/">Portland Child Art Studio</a> is dedicated to supporting the perceptual development of children through artistic learning.<p>
 
-<p>Portland Child Art Studio believes that child art is about engaging in a natural creative process rather than just about producing things that we judge to be aesthetically pleasing.  They believe in the power of artistic learning, experimentation, exploration, play, and discovery as the foundation upon which children will begin to build a life-long relationship with art.</p>
+<p>Portland Child Art Studio believes that child art is about engaging in a natural creative process rather than just about producing things that we judge to be aesthetically pleasing.  They believe in the power of artistic learning, experimentation, exploration, play, and discovery as the foundation upon which children will begin to build a lifelong relationship with art.</p>
 
-<p>Through them, we are able to workshop our projects in actual classes before they are offered online. View available classes here.</p>
+<p>Through Portland Child Art Studio, we are able to workshop our projects in actual classes before they are offered online. View available classes here.</p>
 
 <p>If you are interested in signing up for a class, please use our <a href="/contact">contact page</a>.</p>
 
