--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for(:page_title) { 'Team' } %>
 <% content_for(:hero_image) { image_tag 'heros/team.jpg' } %>
 
-<h2 class="centered">The Board</h2>
+<h2 class="centered">Board of Directors</h2>
 
 <div class="member-grid">
 <% @board_members.each do |member| %>
