--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="newsletter">
     <div class="newsletter__notice centered">
-      Stay in touch! Sign up to be notified of new projects &amp; organization updates.
+      Stay in touch! Sign up to be notified of new projects and organization updates.
     </div>
     <div class="newsletter__form">
       <%= form_tag("/subscribe") do -%>
@@ -13,7 +13,7 @@
   <div class="footer-copyright centered">
     <hr class="footer-separator">
     <div class="footer-organization"
-      <span class="uppercase">Doodles Academy</span> is a non-profit organization fiscally sponsored by Fractured Atlas
+      <span class="uppercase">Doodles Academy</span> is a nonprofit organization fiscally sponsored by Fractured Atlas
     </div>
     <div class="footer-social">
       <% @social_links.each do |social_link| %>
@@ -29,4 +29,3 @@
     </div>
   </div>
 </div>
-
