--- a/app/views/home/classes.html.erb
+++ b/app/views/home/classes.html.erb
@@ -2,7 +2,7 @@
 <% content_for(:hero_image) { image_tag 'heros/classes.jpg' } %>
 
 <p class="lead">
-Through a partnership with the <%= link_to "Portland Child Art Studio", supporters_path %> we are able to workshop classes in the PCAS studio space in Portland, Oregon. The classes are offered free of charge to the Portland Community. Class size is very limited, so <%= link_to "contact us", contact_path %> to check availability.
+Through a partnership with <%= link_to "Portland Child Art Studio", supporters_path %> we are able to workshop classes in the PCAS studio space in Portland, Oregon. The classes are offered free of charge to the Portland community. Class size is limited, so <%= link_to "contact us", contact_path %> to check availability.
 </p>
 <p class="lead">
   PCAS is located at 1819 NW Everett Street.
