--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
         <iframe src="<%= @intro_video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
       <p class="lead">
-        Our mission is to expand children's access to high-quality arts education; we work to remove barriers for educators, and strive to make it easy to offer excellence.
+        Our mission is to expand children's access to high-quality arts education. We work to remove barriers for educators, and strive to make it easy to offer excellence.
       </p>
     </div>
   </section>
@@ -20,7 +20,7 @@
     <%= image_tag 'quotes/imagequilt.jpg', class:"hero-img", style:"height:100%;" %>
     <div class="homepage-content hero-content">
       <h2 class='jumbo'>
-        Art lessons that inspire real creativity.
+        Challenging art lessons inspire real creativity.
       </h2>
       <p class='lead'>
         Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
@@ -42,7 +42,7 @@
       </h2>
       <div>
         <p class='lead'>
-          Doodles Academy brings art education to more students. We provide a free online curriculum and partner with schools in order to bring art classes where there would otherwise be none.
+          Doodles Academy brings art education to underserved students. We provide a free online curriculum and partner with schools in order to bring art classes where there would otherwise be none.
         </p>
       </div>
       <div style='text-align: right;'>
@@ -66,10 +66,10 @@
       </h2>
       <div>
         <p class='lead'>
-         Our vision is that every child receives an arts education that inspires and rewards student creativity, growth and problem solving, irrespective of school budget, zip code, or student demographics.
+         Our vision is that every child receives an arts education that inspires and rewards creativity, growth and problem solving, irrespective of school budget, zip code, or student demographics.
         </p>
         <p class='lead'>
-         Donations help us develop and offer our free classes and free online curriculum, bringing quality art education to students everywhere.
+         Donations help us develop and offer our free classes and free online curriculum, bringing high-quality art education to students everywhere.
         </p>
       </div>
       <div style='text-align: right;'>
