--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -24,8 +24,8 @@
 
 <p>Portland Child Art Studio believes that child art is about engaging in a natural creative process rather than just about producing things that we judge to be aesthetically pleasing.  They believe in the power of artistic learning, experimentation, exploration, play, and discovery as the foundation upon which children will begin to build a lifelong relationship with art.</p>
 
-<p>Through Portland Child Art Studio, we are able to workshop our projects in actual classes before they are offered online. View available classes here.</p>
+<p>Through Portland Child Art Studio, we are able to workshop our projects in actual classes before they are offered online. <a href="/classes">View available classes here</a>.</p>
 
-<p>If you are interested in signing up for a class, please use our <a href="/contact">contact page</a>.</p>
+<p>If you are interested in signing up for a class, please visit the <a href="/classes">PDX Class page</a>.</p>
 
 <br/>
