--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -3,7 +3,7 @@
 
 <h1 class="donors">Donors</h1>
   <% if @donor_headline.present? %>
-  <p class="lead centered"><%= @donor_headline %></p>
+  <p class="lead"><%= @donor_headline %></p>
   <% end %>
 <% if @donors.present? %>
   <% @donors.each do |donor| %>
