change wording on front page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
     <%= image_tag 'quotes/imagequilt.jpg', class:"hero-img", style:"height:100%;" %>
     <div class="homepage-content hero-content">
       <h2 class='jumbo'>
-        Art lessons inspire real creativity.
+        Art lessons that inspire real creativity.
       </h2>
       <p class='lead'>
         Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
