--- a/app/views/home/classes.html.erb
+++ b/app/views/home/classes.html.erb
@@ -1,10 +1,73 @@
 <% content_for(:page_title) { ('PDX Classes') } %>
 <% content_for(:hero_image) { image_tag 'heros/classes.jpg' } %>
 
-<p class="lead">
-Through a partnership with <%= link_to "Portland Child Art Studio", supporters_path %> we are able to workshop classes in the PCAS studio space in Portland, Oregon. The classes are offered free of charge to the Portland community. Class size is limited, so <%= link_to "contact us", contact_path %> to check availability.
-</p>
-<p class="lead">
-  PCAS is located at 1819 NW Everett Street.
-</p>
-<%= image_tag "classes/pdx_class.png", style:"display: block; margin: 0 auto;" %>
+<div class="classes">
+  <h2>
+    Through a partnership with <%= link_to "Portland Child Art Studio", supporters_path %> we are able to workshop classes in the PCAS studio space in Portland, Oregon. The classes are offered free of charge to the Portland community.
+  </h2>
+  <h1>Classes</h1>
+</div>
+
+<div class="container classes">
+  <div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>day</th>
+          <th>academy</th>
+          <th>time</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Monday</td>
+          <td class="classes-academy">
+            <p>Lower Academy</p>
+            <small>K to 2nd grade</small>
+          </td>
+          <td>4:00-4:45pm</td>
+        </tr>
+        <tr>
+          <td>Monday</td>
+          <td class="classes-academy">
+            <p>Upper Academy</p>
+            <small>3rd to 6th grade</small>
+          </td>
+          <td>5:00-5:45pm</td>
+        </tr>
+        <tr>
+          <td>Monday</td>
+          <td class="classes-academy">
+            <p>Upper Academy</p>
+            <small>3rd to 6th grade</small>
+          </td>
+          <td>5:15-6:00pm</td>
+        </tr>
+        <tr>
+          <td>Saturday</td>
+          <td class="classes-academy">
+            <p>Lower Academy</p>
+            <small>K to 2nd grade</small>
+          </td>
+          <td>9:00-9:45am</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div>
+    <p class="classes-emphasize">We emphasize open-ended projects and self-discovery.</p>
+    <div class="classes-info">
+      <ul>
+        <li>Location: PCAS, <a target="_blank" href="https://www.google.com/maps/place/Portland+Child+Art/@45.525185,-122.6919999,17z/data=!4m7!1m4!3m3!1s0x549509f82462bb99:0x304a3a0e2520dfe7!2s1819+NW+Everett+St,+Portland,+OR+97209!3b1!3m1!1s0x549509f8273aac97:0x893b86a064c1a753">1819 NW Everett St, Portland, OR 97209</a></li>
+        <li>Class size is limited to 5</li>
+        <li>Classes run for a full school year, ending in June</li>
+        <li>Email <a target="_blank" href="mailto:tempest@doodles-academy.org">tempest@doodles-academy.org</a> to reserve your spot</li>
+      </ul>
+    </div>
+    <p class="classes-nondiscriminate">Doodles Academy does not discriminate on the basis of race, religion, color, national origin, sex, sexual orientation, disability, genetic information, veteran status, marital status or age in its employment, programs and activities.</p>
+      <ul class="classes-logos">
+        <li><%= image_tag 'logo-yellow-trans.png' %></li>
+        <li><%= image_tag 'partners/pdx-child-art-studio.jpg' %></li>
+      </ul>
+  </div>
+</div>
