minor changes to classes page

--- a/app/views/home/partners.html.erb
+++ b/app/views/home/partners.html.erb
@@ -17,7 +17,7 @@
   </ul>
 <% end %>
 
-<h1 class="community-partners">Community Partners</h1>
+<h1 class="community-partners" id="community-partners">Community Partners</h1>
 <a href="http://portlandchildart.org/"><%= image_tag 'partners/pdx-child-art-studio.jpg', class:'partners-image' %></a>
 <h2>Portland Child Art Studio</h2>
 <p><a href="http://portlandchildart.org/">Portland Child Art Studio</a> is dedicated to supporting the perceptual development of children through artistic learning.<p>
