--- a/app/views/home/classes.html.erb
+++ b/app/views/home/classes.html.erb
@@ -3,7 +3,7 @@
 
 <div class="classes">
   <h2>
-    Through a partnership with <%= link_to "Portland Child Art Studio", supporters_path %> we are able to workshop classes in the PCAS studio space in Portland, Oregon. The classes are offered free of charge to the Portland community.
+    Through a partnership with <%= link_to "Portland Child Art Studio", supporters_path(@supporters, :anchor => "community-partners") %> we are able to workshop classes in the PCAS studio space in Portland, Oregon. The classes are offered free of charge to the Portland community.
   </h2>
   <h1>Classes</h1>
 </div>
