--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,7 @@
       </div>
   </section>
   <section class="hero quote">
-    <!-- <%= image_tag 'quotes/quote_image.jpg', class:"hero-img" %> -->
+    <%= image_tag 'quotes/quote_image.jpg', class:"hero-img" %>
     <div class="hero-content">
       <div class="quote-contents"></div>
     </div>
