updating donate button on front page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,7 +72,7 @@
         </p>
       </div>
       <div style='text-align: right;'>
-        <a class="btn btn-xl btn-white" href="/donate">
+        <a class="btn btn-xl btn-white" href="https://www.generosity.com/education-fundraising/every-child-deserves-a-space-to-doodle">
           Donate Now
         </a>
       </div>
