minor changes to classes page

--- a/app/views/home/classes.html.erb
+++ b/app/views/home/classes.html.erb
@@ -23,7 +23,7 @@
           <td>Monday</td>
           <td class="classes-academy">
             <p>Lower Academy</p>
-            <small>K to 2nd grade</small>
+            <small>1st to 2nd grade</small>
           </td>
           <td>4:00-4:45pm</td>
         </tr>
@@ -36,7 +36,7 @@
           <td>5:00-5:45pm</td>
         </tr>
         <tr>
-          <td>Monday</td>
+          <td>Friday</td>
           <td class="classes-academy">
             <p>Upper Academy</p>
             <small>3rd to 6th grade</small>
@@ -47,7 +47,7 @@
           <td>Saturday</td>
           <td class="classes-academy">
             <p>Lower Academy</p>
-            <small>K to 2nd grade</small>
+            <small>1st to 2nd grade</small>
           </td>
           <td>9:00-9:45am</td>
         </tr>
