adding donors model

--- a/app/views/admin/_navigation.html.erb
+++ b/app/views/admin/_navigation.html.erb
@@ -11,6 +11,7 @@
     <%= nav_link "Lessons", admin_lessons_path %>
     <%= nav_link "Galleries", admin_galleries_path %>
     <%= nav_link "Members", admin_members_path %>
+    <%= nav_link "Donors", admin_donors_path %>
     <%= nav_link "Supply Items", admin_supply_items_path %>
   </ul>
 </nav>
