added donor model that feeds to supports page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,7 +18,6 @@
 @import 'contact';
 @import 'themes';
 @import 'forms';
-@import 'partners';
 @import 'buttons';
 @import 'projects';
 @import 'markdown';
@@ -28,3 +27,4 @@
 @import 'modal';
 @import 'admin';
 @import 'classes';
+@import 'donors';
