--- a/app/assets/stylesheets/donors.scss
+++ b/app/assets/stylesheets/donors.scss
@@ -1,3 +1,21 @@
-// Place all the styles related to the Donors controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.donors, .community-partners {
+  text-align: center;
+  text-transform: none;
+  font-weight: 300;
+}
+
+.partners-image {
+  width: 35%;
+  float: right;
+  margin: 2em;
+}
+
+ul.donors {
+  text-align: left;
+  margin: 3em 0 6em 0;
+
+  li {
+    // display: inline;
+    list-style: none;
+  }
+}
