--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -13,6 +13,10 @@
     opacity: 1.0;
     z-index: 1000;
   }
+
+  &#modal-insp {
+    background-color: #F1F7F7;
+  }
 }
 
 .modal-content {
@@ -84,4 +88,12 @@
   font-weight: 300;
   text-transform: none;
   font-style: italic;
+}
+
+#modal-insp {
+  .modal-body {
+    max-height: 100%;
+    padding: 100px;
+    background-color: #F1F7F7
+  }
 }
