--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -13,10 +13,6 @@
     opacity: 1.0;
     z-index: 1000;
   }
-
-  &#modal-insp {
-    background-color: #F1F7F7;
-  }
 }
 
 .modal-content {
@@ -24,6 +20,13 @@
   width: 50%;
   background-color: darken(white, 5%);
   padding: 2em;
+
+  &.modal-full {
+    width: 100%;
+    height: 100%;
+    background-color: darken(black, 5%);
+    border-radius: 0px;
+  }
 }
 
 .modal-title {
@@ -36,6 +39,10 @@
   max-height: 60%;
   overflow-y: auto;
   overflow-x: hidden;
+
+  .modal-full & {
+    max-height: 100%;
+  }
 }
 
 .modal-close {
@@ -54,6 +61,10 @@
   &:hover {
     cursor: pointer;
     opacity: 1;
+  }
+
+  .modal-full & {
+    color: white;
   }
 }
 .btn-group {
@@ -90,10 +101,3 @@
   font-style: italic;
 }
 
-#modal-insp {
-  .modal-body {
-    max-height: 100%;
-    padding: 100px;
-    background-color: #F1F7F7
-  }
-}
