adding resize glyphicon to inspiration image in lessons

--- a/app/assets/stylesheets/markdown.scss
+++ b/app/assets/stylesheets/markdown.scss
@@ -56,3 +56,12 @@
     padding: 20px;
   }
 }
+
+.glyphicon-resize-full {
+    color: #F1F7F7;
+    top: -75px;
+    display: block;
+    font-size: 300%;
+    text-align: center;
+    line-height: 0;
+}
