--- a/app/assets/stylesheets/markdown.scss
+++ b/app/assets/stylesheets/markdown.scss
@@ -57,11 +57,21 @@
   }
 }
 
-.glyphicon-resize-full {
-    color: #F1F7F7;
-    top: -75px;
-    display: block;
-    font-size: 300%;
-    text-align: center;
-    line-height: 0;
+.insp-img-wrapper {
+  position: relative;
+
+  .glyphicon-zoom-in {
+      visibility: hidden;
+      color: #F1F7F7;
+      font-size: 200%;
+      position: absolute;
+      top: 10%;
+      left: 87%;
+  }
+}
+
+a.modal-insp:hover {
+  .glyphicon-zoom-in {
+      visibility: visible;
+  }
 }
