changing mission statement

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,8 @@
         <iframe src="<%= @intro_video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
       <p class="lead">
-        Our mission is to expand children's access to high-quality arts education. We work to remove barriers for educators, and strive to make it easy to offer excellence.
+        Our mission is to expand children's access to high-quality arts education.
+        Our vision is that every child receives an arts education that inspires and rewards creativity, growth and problem solving, irrespective of cost or zip code.
       </p>
     </div>
   </section>
