adjusting glyphicon on insp img

--- a/app/assets/stylesheets/markdown.scss
+++ b/app/assets/stylesheets/markdown.scss
@@ -63,10 +63,10 @@
   .glyphicon-zoom-in {
       visibility: hidden;
       color: #F1F7F7;
-      font-size: 200%;
+      // font-size: 200%;
       position: absolute;
       top: 10%;
-      left: 87%;
+      left: 90%;
   }
 }
 
