Adding lesson order to admin form

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -29,6 +29,11 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :order %>
+    <%= f.text_field :order %>
+  </div>
+
+  <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
