--- a/app/assets/stylesheets/donors.scss
+++ b/app/assets/stylesheets/donors.scss
@@ -13,9 +13,11 @@
 ul.donors {
   text-align: left;
   margin: 3em 0 6em 0;
+  column-count: 3;
 
   li {
     // display: inline;
     list-style: none;
+    break-inside: avoid;
   }
 }
