change title of donors page

--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:page_title) { 'Community Supporters' } %>
+<% content_for(:page_title) { 'Supporters' } %>
 <% content_for(:hero_image) { image_tag 'heros/partners.jpg' } %>
 
 <h1 class="donors">Donors</h1>
