--- a/app/views/admin/lessons/show.html.erb
+++ b/app/views/admin/lessons/show.html.erb
@@ -23,6 +23,7 @@
 </p>
 <p><%= image_tag @lesson.inspiration_image.url(:thumb) %></p>
 <p><%= image_tag @lesson.example_image.url(:thumb) %></p>
+<p>Inspiration Image Title: <%= @lesson.inspiration_image_title %></p>
 <p>Inspiration Image Description: <%= @lesson.inspiration_image_description %></p>
 
 
