add lifetime donation field

--- a/app/views/admin/donors/_form.html.erb
+++ b/app/views/admin/donors/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.label :last_name %><br>
     <%= f.text_field :last_name %>
   </div>
+  <div class="field">
+    <%= f.label :lifetime_donation %><br>
+    <%= f.text_field :lifetime_donation %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
