initial & styles & html for template

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,7 @@
 @import 'buttons';
 @import 'projects';
 @import 'markdown';
+@import 'lessons';
 @import 'members';
 @import 'frame';
 @import 'lightbox';
