--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -1,3 +1,91 @@
-// Place all the styles related to the lessons controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.lesson-wrapper {
+
+  h1 {
+    color: black;
+    font-weight: 300;
+    font-size: 36px;
+    padding-top: 20px;
+  }
+
+  h2 {
+    color: #8DC5E6;
+    font-weight: 800;
+    font-size: 26px;
+    text-transform: uppercase;
+  }
+
+  h3 {
+    color: #666666;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+
+  h4 {
+    color: #666666;
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  p {
+    color: black;
+    font-size: 18px;
+    font-weight: 400;
+  }
+
+  hr {
+      color: #333333;
+      margin-bottom: -20px;
+  }
+
+  blockquote {
+    background: #F1F7F7;
+    margin: 0;
+    padding: 30px;
+    border: none;
+    max-width: 600px;
+  }
+
+  blockquote.toc {
+    max-width: none;
+  }
+
+  blockquote img {
+    padding: 20px;
+  }
+
+  ul {
+    margin: -10px 0 0 0;
+
+    li {
+      margin-left: 30px;
+
+      &:last-child {
+        margin-bottom: 30px;
+      }
+    }
+  }
+
+}
+
+.insp-img-wrapper {
+  position: relative;
+}
+
+// .insp-img-wrapper {
+//   position: relative;
+//
+//   // .glyphicon-zoom-in {
+//   //     visibility: hidden;
+//   //     color: #F1F7F7;
+//   //     // font-size: 200%;
+//   //     position: absolute;
+//   //     top: 10%;
+//   //     left: 90%;
+//   // }
+// }
+
+// a.modal-insp:hover {
+//   .glyphicon-zoom-in {
+//       visibility: visible;
+//   }
+// }
