--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -33,18 +33,17 @@
   </blockquote>
 
   <!-- look at Tempest's template to make sure this is correct -->
-
-<!-- Could the timestamps be before the heading, so '5m, Look at and discuss...' -->
-<!-- Under ‘Look at and Discuss’, could we do italics starting from ‘alternatively’? This is just extra info for those who need it. -->
-<!-- Under ‘Check for Understanding’ most of the newer lessons have bullet points that go over specific points. Might be worthwhile to have some filler info up there for that? -->
-<!-- Oh, I actually just re-read that section. The Superheros part does have that. Starting at ‘in particular’ those should be bulleted away from the instructions to make them clear for the teacher to read -->
-<!-- ‘Anticipated Problems’ will also be bulleted -->
-  <!-- put all new info at top & more redundant or less useful info a the bottom? -->
   <div>
     <hr />
     <h1>Overview</h1>
     <div>
-      <h2 id='objective'>Objective</h2>
+      <a><div class='collapsible' id='objective'>
+        <div class='collapsible-heading'><h2 id='clean-up-presentations'>Objective</h2></div>
+        <div class='collapsible-plus'><h2>+</h2></div>
+      </div></a>
+      <div class='objective-collapsed' hidden>
+        <p>just checking to see that this works correctly</p>
+      </div>
       <h2 id='setup'>Setup</h2>
       <h2 id='materials'>Materials</h2>
       <h2 id='photocopies'>Photocopies</h2>
@@ -52,48 +51,52 @@
     </div>
     <hr />
     <h1>Lesson</h1>
-    <h2 id='inspiration'>inspiration</h2>
+    <h2 id='inspiration'>10m, inspiration</h2>
     <div>
       <% if @lesson.inspiration_image.exists? %>
         <div class="hidden inspiration-image" data-medium-url="<%= @lesson.inspiration_image.url(:medium) %>" data-large-url="<%= @lesson.inspiration_image.url(:large) %>" data-title="<%= markdown @lesson.inspiration_image_title %>" data-description="<%= markdown @lesson.inspiration_image_description %>"></div>
       <% end %>
     </div>
     <div>
-      <h3>look and  discuss an art piece that introduces some of the lesson concepts 10m</h3>
+      <h3>look and  discuss an art piece that introduces some of the lesson concepts</h3>
       <p>Project the inspiration image where students can see it. Give students a moment to study it silently, then begin a brief discussion with the phrase, “What can we find?”. Paraphrase what students say for the benefit of the class, being careful to remain neutral, then ask “What else can we find?”.</p>
-      <p>Alternately, allow them to draw or write what they notice on a blank piece of paper or in a sketchbook.</p>
-      <p>The point of this discussion time is to have students learn and add onto each other’s thoughts. By remaining neutral and simply repeating what students say you allow students to do the heavy mental lifting and also create an environment where there is no wrong answer, fostering creativity and mental risk-taking.</p>
+      <p><i>Alternately, allow them to draw or write what they notice on a blank piece of paper or in a sketchbook.</i></p>
+      <p><i>The point of this discussion time is to have students learn and add onto each other’s thoughts. By remaining neutral and simply repeating what students say you allow students to do the heavy mental lifting and also create an environment where there is no wrong answer, fostering creativity and mental risk-taking.</i></p>
     </div>
-    <h1 id='introduction'>Introduction</h1>
+    <h2 id='introduction'>5m, Introduction</h2>
     <div>
       <% if @lesson.video_uri.present? %>
       <div class="hidden video-intro" data-video-uri="<%= @lesson.video_uri %>"></div>
       <% end %>
     </div>
     <div>
-      <h3>watch the video introduction 5m</h3>
+      <h3>watch the video introduction</h3>
       <!-- <h2>name of video</h2> -->
       <h3>check for understanding</h3>
-      <p>Check for understanding by asking, “Who was listening closely that can sum up what we are doing today?” Make sure that student artists can list all the steps and clarify anything that needs clarifying. In particular, make sure that they understand they should fill the box with the body part—if they are made smaller the superhero will be too small.</p>
+      <p>Check for understanding by asking, “Who was listening closely that can sum up what we are doing today?” Make sure that student artists can list all the steps and clarify anything that needs clarifying.</p>
     </div>
     <div>
-      <h2 id='worktime'>worktime</h2>
-      <h3>independent 20-25m</h3>
+      <h2>20-25m, worktime</h2>
+      <h3>independent</h3>
       <p>The students work independently on their work as the teacher circulates. Foster strong work habits by commenting on student artists who are focused on their work as well as student artist who seems be pushing themselves to try new things.</p>
       <h3>focus on</h3>
-      <h2 id='clean-up-presentations'>clean-up/presentations</h2>
-      <h3>students discuss the artistic decisions that they made using 'what, how, and why' then take comments or questions 5-10m</h3>
-      <p>Depending on the teacher’s style of classroom management, it might be helpful to only choose and train a few kids to clean. The rest of the class can be busy with the presentation. Make sure to train these helpers well in advance so that you aren’t left with a messy room.</p>
-      <p>Clean-up times will vary with materials; get to know your class and allow 5-10 minutes depending on how efficient they are and whether or not the material was messy.</p>
-      <p>Choose presenting student artists in advance and let them know during their work time so that they are prepared.</p>
-      <p>Sharing should work as follows:
-        <ul>
-          <li>Student stands by their work. A teacher should hold it, or place it on an easel.</li>
-          <li>The student presents their work, answering What they made, How they made it, and Why they made the decisions that they did. When they are done they ask, “Any comments or questions?” and can take responses from the audience.</li>
-          <li>A note on responses: it is o.k. if a audience member questions or wants clarification from the artist. It is also o.k. if an audience member makes suggestions. But it must be done in a kind, thoughtful, and respectful way.</li>
-          <li>Always end the conversation by asking the class to give the artist a compliment.</li>
-        </ul>
-      </p>
+      <a><div class='collapsible' id='worktime'>
+        <div class='collapsible-heading'><h2 id='clean-up-presentations'>5-10m, clean-up/presentations</h2></div>
+        <div class='collapsible-plus'><h2>+</h2></div>
+      </div></a>
+      <div class='worktime-collapsed' hidden>
+        <h3>students discuss the artistic decisions that they made using 'what, how, and why' then take comments or questions</h3>
+        <p>Depending on the teacher’s style of classroom management, it might be helpful to only choose and train a few kids to clean. The rest of the class can be busy with the presentation. Make sure to train these helpers well in advance so that you aren’t left with a messy room.</p>
+        <p>Clean-up times will vary with materials; get to know your class and allow 5-10 minutes depending on how efficient they are and whether or not the material was messy.</p>
+        <p>Choose presenting student artists in advance and let them know during their work time so that they are prepared.</p>
+        <p>Sharing should work as follows:</p>
+          <ul class="sharing">
+            <li>Student stands by their work. A teacher should hold it, or place it on an easel.</li>
+            <li>The student presents their work, answering What they made, How they made it, and Why they made the decisions that they did. When they are done they ask, “Any comments or questions?” and can take responses from the audience.</li>
+            <li>A note on responses: it is o.k. if an audience member questions or wants clarification from the artist. It is also o.k. if an audience member makes suggestions. But it must be done in a kind, thoughtful, and respectful way.</li>
+            <li>Always end the conversation by asking the class to give the artist a compliment.</li>
+          </ul>
+      </div>
     </div>
     <hr />
     <h1>Extension</h1>
