added objective column to lessons

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -57,6 +57,11 @@
     label: "Inspiration Image" %>
 
   <div class="field">
+    <%= f.label :objective %>
+    <%= f.text_field :objective %>
+  </div>
+
+  <div class="field">
     <%= f.label :inspiration_image_title %>
     <%= f.text_field :inspiration_image_title %>
    </div>
