--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -17,7 +17,7 @@
         <div class="student-image">
           <%= image_tag @lesson.example_image.url(:medium) %>
         </div>
-        <div class="superhero-quote">
+        <div class="superhero-quote" id='synopsis'>
           <%= @lesson.synopsis %>
         </div>
       </div>
@@ -27,10 +27,12 @@
 
 
 <!--fix toc so that nav bar doesn't interfere-->
+
   <blockquote class="backdrop toc">
     <p class="toc-title">Lesson Map</p>
     <%= render "shared/table_of_contents", sectionable: @lesson %>
   </blockquote>
+
 
   <!-- look at Tempest's template to make sure this is correct -->
   <div>
@@ -42,7 +44,7 @@
         <div class='collapsible-plus'><h2>+</h2></div>
       </div></a>
       <div class='objective-collapsed' hidden>
-        <p>just checking to see that this works correctly</p>
+        <p><%= @lesson.objective %></p>
       </div>
       <h2 id='setup'>Setup</h2>
       <h2 id='materials'>Materials</h2>
