minor styling tweak

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -43,7 +43,7 @@
         <div class='collapsible-heading'><h2 id='clean-up-presentations'>Objective</h2></div>
         <div class='collapsible-plus'><h2>+</h2></div>
       </div></a>
-      <div class='objective-collapsed' hidden>
+      <div class='objective-collapsed collapsed' hidden>
         <p><%= @lesson.objective %></p>
       </div>
       <h2 id='setup'>Setup</h2>
