--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -39,13 +39,15 @@
     <hr />
     <h1>Overview</h1>
     <div>
-      <a><div class='collapsible' id='objective'>
+      <!-- <a><div class='collapsible' id='objective'>
         <div class='collapsible-heading'><h2 id='clean-up-presentations'>Objective</h2></div>
         <div class='collapsible-plus'><h2>+</h2></div>
       </div></a>
       <div class='objective-collapsed collapsed' hidden>
         <p><%= @lesson.objective %></p>
-      </div>
+      </div> -->
+      <h2 id='objective'>objective</h2>
+      <p><%= @lesson.objective %></p>
       <h2 id='setup'>Setup</h2>
       <h2 id='materials'>Materials</h2>
       <h2 id='photocopies'>Photocopies</h2>
@@ -83,11 +85,13 @@
       <p>The students work independently on their work as the teacher circulates. Foster strong work habits by commenting on student artists who are focused on their work as well as student artist who seems be pushing themselves to try new things.</p>
       <h3>focus on</h3>
       <a><div class='collapsible' id='worktime'>
-        <div class='collapsible-heading'><h2 id='clean-up-presentations'>5-10m, clean-up/presentations</h2></div>
+        <div class='collapsible-heading'>
+          <h2 id='clean-up-presentations'>5-10m, clean-up/presentations</h2>
+          <h3>students discuss the artistic decisions that they made using 'what, how, and why' then take comments or questions...</h3>
+        </div>
         <div class='collapsible-plus'><h2>+</h2></div>
       </div></a>
-      <div class='worktime-collapsed' hidden>
-        <h3>students discuss the artistic decisions that they made using 'what, how, and why' then take comments or questions</h3>
+      <div class='worktime-collapsed collapsed' hidden>
         <p>Depending on the teacher’s style of classroom management, it might be helpful to only choose and train a few kids to clean. The rest of the class can be busy with the presentation. Make sure to train these helpers well in advance so that you aren’t left with a messy room.</p>
         <p>Clean-up times will vary with materials; get to know your class and allow 5-10 minutes depending on how efficient they are and whether or not the material was messy.</p>
         <p>Choose presenting student artists in advance and let them know during their work time so that they are prepared.</p>
