adding materials column

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -50,6 +50,7 @@
       <p><%= @lesson.objective %></p>
       <h2 id='setup'>Setup</h2>
       <h2 id='materials'>Materials</h2>
+      <p><%= @lesson.materials %></p>
       <h2 id='photocopies'>Photocopies</h2>
       <h2 id='media'>Media</h2>
     </div>
