added media column

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -67,6 +67,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :media %>
+    <%= f.text_field :media %>
+  </div>
+
+  <div class="field">
     <%= f.label :inspiration_image_title %>
     <%= f.text_field :inspiration_image_title %>
    </div>
