--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -53,6 +53,7 @@
       <p><%= @lesson.materials %></p>
       <h2 id='photocopies'>Photocopies</h2>
       <h2 id='media'>Media</h2>
+      <p><%= @lesson.media %></p>
     </div>
     <hr />
     <h1>Lesson</h1>
