added setting_up column to lessons

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -49,6 +49,7 @@
       <h2 id='objective'>objective</h2>
       <p><%= @lesson.objective %></p>
       <h2 id='setup'>Setup</h2>
+      <p><%= @lesson.setting_up %></p>
       <h2 id='materials'>Materials</h2>
       <p><%= @lesson.materials %></p>
       <h2 id='photocopies'>Photocopies</h2>
