--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -62,6 +62,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :setup %>
+    <%= f.text_field :setting_up %>
+  </div>
+
+  <div class="field">
     <%= f.label :materials %>
     <%= f.text_field :materials %>
   </div>
