--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -35,84 +35,106 @@
 
 
   <!-- look at Tempest's template to make sure this is correct -->
+
+  <hr />
+  <h1>Overview</h1>
   <div>
-    <hr />
-    <h1>Overview</h1>
-    <div>
-      <!-- <a><div class='collapsible' id='objective'>
-        <div class='collapsible-heading'><h2 id='clean-up-presentations'>Objective</h2></div>
-        <div class='collapsible-plus'><h2>+</h2></div>
-      </div></a>
-      <div class='objective-collapsed collapsed' hidden>
-        <p><%= @lesson.objective %></p>
-      </div> -->
-      <h2 id='objective'>objective</h2>
+    <!-- <a><div class='collapsible' id='objective'>
+      <div class='collapsible-heading'><h2 id='clean-up-presentations'>Objective</h2></div>
+      <div class='collapsible-plus'><h2>+</h2></div>
+    </div></a>
+    <div class='objective-collapsed collapsed' hidden>
       <p><%= @lesson.objective %></p>
-      <h2 id='setup'>Setup</h2>
-      <p><%= @lesson.setting_up %></p>
-      <h2 id='materials'>Materials</h2>
-      <p><%= @lesson.materials %></p>
-      <h2 id='photocopies'>Photocopies</h2>
-      <h2 id='media'>Media</h2>
-      <p><%= @lesson.media %></p>
-    </div>
-    <hr />
-    <h1>Lesson</h1>
-    <h2 id='inspiration'>10m, inspiration</h2>
-    <div>
-      <% if @lesson.inspiration_image.exists? %>
-        <div class="hidden inspiration-image" data-medium-url="<%= @lesson.inspiration_image.url(:medium) %>" data-large-url="<%= @lesson.inspiration_image.url(:large) %>" data-title="<%= markdown @lesson.inspiration_image_title %>" data-description="<%= markdown @lesson.inspiration_image_description %>"></div>
-      <% end %>
-    </div>
-    <div>
-      <h3>look and  discuss an art piece that introduces some of the lesson concepts</h3>
-      <p>Project the inspiration image where students can see it. Give students a moment to study it silently, then begin a brief discussion with the phrase, “What can we find?”. Paraphrase what students say for the benefit of the class, being careful to remain neutral, then ask “What else can we find?”.</p>
-      <p><i>Alternately, allow them to draw or write what they notice on a blank piece of paper or in a sketchbook.</i></p>
-      <p><i>The point of this discussion time is to have students learn and add onto each other’s thoughts. By remaining neutral and simply repeating what students say you allow students to do the heavy mental lifting and also create an environment where there is no wrong answer, fostering creativity and mental risk-taking.</i></p>
-    </div>
-    <h2 id='introduction'>5m, Introduction</h2>
-    <div>
-      <% if @lesson.video_uri.present? %>
-      <div class="hidden video-intro" data-video-uri="<%= @lesson.video_uri %>"></div>
-      <% end %>
-    </div>
-    <div>
-      <h3>watch the video introduction</h3>
-      <!-- <h2>name of video</h2> -->
-      <h3>check for understanding</h3>
-      <p>Check for understanding by asking, “Who was listening closely that can sum up what we are doing today?” Make sure that student artists can list all the steps and clarify anything that needs clarifying.</p>
-    </div>
-    <div>
-      <h2>20-25m, worktime</h2>
+    </div> -->
+    <h2 id='objective'>objective</h2>
+    <p><%= @lesson.objective %></p>
+    <h2 id='setup'>Setup</h2>
+    <p><%= @lesson.setting_up %></p>
+    <h2 id='materials'>Materials</h2>
+    <p><%= @lesson.materials %></p>
+    <h2 id='photocopies'>Photocopies</h2>
+    <h2 id='media'>Media</h2>
+    <p><%= @lesson.media %></p>
+  </div>
+  <hr />
+  <h1>Lesson</h1>
+  <h2 id='inspiration'>10m, inspiration</h2>
+  <div>
+    <% if @lesson.inspiration_image.exists? %>
+      <div class="hidden inspiration-image" data-medium-url="<%= @lesson.inspiration_image.url(:medium) %>" data-large-url="<%= @lesson.inspiration_image.url(:large) %>" data-title="<%= markdown @lesson.inspiration_image_title %>" data-description="<%= markdown @lesson.inspiration_image_description %>"></div>
+    <% end %>
+  </div>
+  <div>
+    <h3>look and  discuss an art piece that introduces some of the lesson concepts</h3>
+    <p>Project the inspiration image where students can see it. Give students a moment to study it silently, then begin a brief discussion with the phrase, “What can we find?”. Paraphrase what students say for the benefit of the class, being careful to remain neutral, then ask “What else can we find?”.</p>
+    <p><i>Alternately, allow them to draw or write what they notice on a blank piece of paper or in a sketchbook.</i></p>
+    <p><i>The point of this discussion time is to have students learn and add onto each other’s thoughts. By remaining neutral and simply repeating what students say you allow students to do the heavy mental lifting and also create an environment where there is no wrong answer, fostering creativity and mental risk-taking.</i></p>
+  </div>
+  <h2 id='introduction'>5m, Introduction</h2>
+  <div>
+    <% if @lesson.video_uri.present? %>
+    <div class="hidden video-intro" data-video-uri="<%= @lesson.video_uri %>"></div>
+    <% end %>
+  </div>
+  <div>
+    <h3>watch the video introduction</h3>
+    <!-- <h2>name of video</h2> -->
+    <h3>check for understanding</h3>
+    <p>Check for understanding by asking, “Who was listening closely that can sum up what we are doing today?” Make sure that student artists can list all the steps and clarify anything that needs clarifying.</p>
+  </div>
+  <div>
+    <a><div class='collapsible' id='worktime'>
+      <div class='collapsible-heading'>
+        <h2>20-25m, worktime</h2>
+      </div>
+      <div class='collapsible-plus'><h2>+</h2></div>
+    </div></a>
+    <div class='worktime-collapsed collapsed' hidden>
       <h3>independent</h3>
       <p>The students work independently on their work as the teacher circulates. Foster strong work habits by commenting on student artists who are focused on their work as well as student artist who seems be pushing themselves to try new things.</p>
-      <h3>focus on</h3>
-      <a><div class='collapsible' id='worktime'>
-        <div class='collapsible-heading'>
-          <h2 id='clean-up-presentations'>5-10m, clean-up/presentations</h2>
-          <h3>students discuss the artistic decisions that they made using 'what, how, and why' then take comments or questions...</h3>
-        </div>
-        <div class='collapsible-plus'><h2>+</h2></div>
-      </div></a>
-      <div class='worktime-collapsed collapsed' hidden>
-        <p>Depending on the teacher’s style of classroom management, it might be helpful to only choose and train a few kids to clean. The rest of the class can be busy with the presentation. Make sure to train these helpers well in advance so that you aren’t left with a messy room.</p>
-        <p>Clean-up times will vary with materials; get to know your class and allow 5-10 minutes depending on how efficient they are and whether or not the material was messy.</p>
-        <p>Choose presenting student artists in advance and let them know during their work time so that they are prepared.</p>
-        <p>Sharing should work as follows:</p>
-          <ul class="sharing">
-            <li>Student stands by their work. A teacher should hold it, or place it on an easel.</li>
-            <li>The student presents their work, answering What they made, How they made it, and Why they made the decisions that they did. When they are done they ask, “Any comments or questions?” and can take responses from the audience.</li>
-            <li>A note on responses: it is o.k. if an audience member questions or wants clarification from the artist. It is also o.k. if an audience member makes suggestions. But it must be done in a kind, thoughtful, and respectful way.</li>
-            <li>Always end the conversation by asking the class to give the artist a compliment.</li>
-          </ul>
+    <h3><%= @lesson.worktime_focus %></h3>
+    <p><%= @lesson.worktime %></p>
+  </div>
+    <a><div class='collapsible' id='clean-up-presentations'>
+      <div class='collapsible-heading'>
+        <h2>5-10m, clean-up/presentations</h2>
       </div>
+      <div class='collapsible-plus'><h2>+</h2></div>
+    </div></a>
+    <div class='clean-up-presentations-collapsed collapsed' hidden>
+      <h3>students discuss the artistic decisions that they made using 'what, how, and why' then take comments or questions.</h3>
+      <p>Depending on the teacher’s style of classroom management, it might be helpful to only choose and train a few kids to clean. The rest of the class can be busy with the presentation. Make sure to train these helpers well in advance so that you aren’t left with a messy room.</p>
+      <p>Clean-up times will vary with materials; get to know your class and allow 5-10 minutes depending on how efficient they are and whether or not the material was messy.</p>
+      <p>Choose presenting student artists in advance and let them know during their work time so that they are prepared.</p>
+      <p>Sharing should work as follows:</p>
+        <ul class="sharing">
+          <li>Student stands by their work. A teacher should hold it, or place it on an easel.</li>
+          <li>The student presents their work, answering What they made, How they made it, and Why they made the decisions that they did. When they are done they ask, “Any comments or questions?” and can take responses from the audience.</li>
+          <li>A note on responses: it is o.k. if an audience member questions or wants clarification from the artist. It is also o.k. if an audience member makes suggestions. But it must be done in a kind, thoughtful, and respectful way.</li>
+          <li>Always end the conversation by asking the class to give the artist a compliment.</li>
+        </ul>
     </div>
-    <hr />
-    <h1>Extension</h1>
-    <div>
-      <h2 id='anticipated-problems'>anticipated problems</h2>
+  </div>
+  <hr />
+  <h1>Extension</h1>
+
+  <a><div class='collapsible' id='anticipated-problems'>
+    <div class='collapsible-heading'>
+      <h2>anticipated problems</h2>
+    </div>
+    <div class='collapsible-plus'><h2>+</h2></div>
+  </div></a>
+  <div class='anticipated-problems-collapsed collapsed' hidden>
+    <p><%= @lesson.anticipated_problems %></p>
+  </div>
+  <a><div class='collapsible' id='early-finishers'>
+    <div class='collapsible-heading'>
       <h2 id='early-finishers'>early finishers</h2>
     </div>
+    <div class='collapsible-plus'><h2>+</h2></div>
+  </div></a>
+  <div class='early-finishers-collapsed collapsed' hidden>
+    <p><%= @lesson.early_finishers %></p>
   </div>
 
   <!-- get rid of inline styling below-->
@@ -126,4 +148,5 @@
     <h3 class='centered'>Did you enjoy this project? Sign up to be the first to hear when we release our next project!</h3>
   <% end %>
   </p>
+
 </div>
